--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">M-Learing</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_mail_recommandation">MailRecommandation</string>
+    <string name="btnEmail">Recommand via Email</string>
 </resources>
